--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,12 +1,16 @@
 {
     "HOME": {
-        "title": "Home", 
+        "title": "Home",
         "greeting": "Hey {{name}}! Welcome to the Ionic Academy!",
-        "withcode": "<br><br>You are <b>epic</b>!", 
+        "withcode": "<br><br>You are <b>epic</b>!",
         "btn": "Show Alert"
     },
     "ALERT": {
-        "header": "Error", 
-        "msg": "there was a problem with your operation" 
+        "header": "Error",
+        "msg": "there was a problem with your operation"
+    },
+    "ADJECTIVES": {
+        "withhcode": "<ol> <li> When we use an adjective with a noun, the adjective goes before the noun: <br> It's a big city <strong> NOT </strong> <s> It's a city big </s>. </li> <li>We can also use the adjectives without a noun, after the verb be.</li> <li>We often use very and quite before adjectives: </li> <ol> <li>He's very tall.</li> <li>He's quite tall.</li> <li>He isn't very tall.</li> </ol> </ol>"
     }
+
 }
